ctfd/templates/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: ctfd
    app.kubernetes.io/managed-by: Helm
  name: nginxservice
spec:
  ports:
    - name: "webport"
      port: 80
      targetPort: 8080
  selector:
    io.kompose.service: nginx
status:
  loadBalancer: {}
